--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Cottage</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="istyle.css">
  </head>
  <body> 
 
@@ -99,6 +99,6 @@
     </div>
 
     <img class="run" src="NickRun.gif" alt="Demon run">
-    
+
  </body>
  </html>
