--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
     <img class="soupy" src="Soupy.gif" alt="Soupy gif">
 
     <div class="timeline">
+
+        <div class="imgalign">
         <img class="tlimg" src="FamilyPortait.webp" alt="">
+        </div>
         
         <h3>A breif tale</h3>
 
